存储试卷信息

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-beanutils-1.8.3-connections.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-beanutils-1.8.3-connections.jar
+file.reference.commons-collections-3.1.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-collections-3.1.jar
+file.reference.commons-lang-2.6.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.2.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-logging-1.1.2.jar
 file.reference.derby.jar=E:\\glassfish-4.1.1\\javadb\\lib\\derby.jar
 file.reference.derbyclient.jar=E:\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
+file.reference.ezmorph-1.0.6.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\ezmorph-1.0.6.jar
+file.reference.json-lib-2.4-jdk15.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\json-lib-2.4-jdk15.jar
 file.reference.junit-4.7.jar=D:\\ToStudent_JDBC\\JUnit4\\junit-4.7.jar
 file.reference.sqljdbc4.jar=D:\\ToStudent_JDBC\\sqljdbc4.jar
 includes=**
@@ -50,7 +56,13 @@ javac.classpath=\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.junit-4.7.jar}
+    ${file.reference.junit-4.7.jar}:\
+    ${file.reference.commons-beanutils-1.8.3-connections.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}:\
+    ${file.reference.ezmorph-1.0.6.jar}:\
+    ${file.reference.json-lib-2.4-jdk15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
