--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -29,14 +30,21 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.commons-beanutils-1.8.3-connections.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-beanutils-1.8.3-connections.jar
+file.reference.commons-beanutils-1.8.3-connections.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-beanutils-1.8.3-connections.jar
 file.reference.commons-collections-3.1.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-collections-3.1.jar
+file.reference.commons-collections-3.1.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-collections-3.1.jar
 file.reference.commons-lang-2.6.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-lang-2.6.jar
+file.reference.commons-lang-2.6.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.2.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-logging-1.1.2.jar
+file.reference.commons-logging-1.1.2.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-logging-1.1.2.jar
 file.reference.derby.jar=E:\\glassfish-4.1.1\\javadb\\lib\\derby.jar
 file.reference.derbyclient.jar=E:\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
 file.reference.ezmorph-1.0.6.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\ezmorph-1.0.6.jar
+file.reference.ezmorph-1.0.6.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\ezmorph-1.0.6.jar
 file.reference.json-lib-2.4-jdk15.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\json-lib-2.4-jdk15.jar
+file.reference.json-lib-2.4-jdk15.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\json-lib-2.4-jdk15.jar
 file.reference.junit-4.7.jar=D:\\ToStudent_JDBC\\JUnit4\\junit-4.7.jar
+file.reference.junit-4.7.jar-1=C:\\Users\\lenovo\\Desktop\\\u8d44\u6e90\u5305\\JUnit4\\junit-4.7.jar
 file.reference.sqljdbc4.jar=D:\\ToStudent_JDBC\\sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -62,7 +70,14 @@ javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.2.jar}:\
     ${file.reference.ezmorph-1.0.6.jar}:\
-    ${file.reference.json-lib-2.4-jdk15.jar}
+    ${file.reference.json-lib-2.4-jdk15.jar}:\
+    ${file.reference.commons-beanutils-1.8.3-connections.jar-1}:\
+    ${file.reference.commons-collections-3.1.jar-1}:\
+    ${file.reference.commons-lang-2.6.jar-1}:\
+    ${file.reference.commons-logging-1.1.2.jar-1}:\
+    ${file.reference.ezmorph-1.0.6.jar-1}:\
+    ${file.reference.json-lib-2.4-jdk15.jar-1}:\
+    ${file.reference.junit-4.7.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
