--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-beanutils-1.8.3-connections.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-beanutils-1.8.3-connections.jar
 file.reference.commons-collections-3.1.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-collections-3.1.jar
+file.reference.commons-fileupload-1.2.2.jar=D:\\ToStudent_JDBC\\\u6587\u4ef6\u4e0b\u8f7djar\u5305\\commons-fileupload-1.2.2.jar
+file.reference.commons-io-2.2.jar=D:\\ToStudent_JDBC\\\u6587\u4ef6\u4e0b\u8f7djar\u5305\\commons-io-2.2.jar
 file.reference.commons-lang-2.6.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.2.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\commons-logging-1.1.2.jar
 file.reference.derby.jar=E:\\glassfish-4.1.1\\javadb\\lib\\derby.jar
@@ -37,7 +39,14 @@ file.reference.derbyclient.jar=E:\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
 file.reference.ezmorph-1.0.6.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\ezmorph-1.0.6.jar
 file.reference.json-lib-2.4-jdk15.jar=C:\\Users\\lenovo\\Desktop\\\u684c\u9762\u6587\u4ef6\u5939\\jsp\u9879\u76ee\\\u53cdjson\u9700\u8981\u7684\u516d\u4e2a\u5305\\\u53cdjson\u9700\u8981\u7684\u5305\\json-lib-2.4-jdk15.jar
 file.reference.junit-4.7.jar=D:\\ToStudent_JDBC\\JUnit4\\junit-4.7.jar
+file.reference.poi-3.11-20141221.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\poi-3.11-20141221.jar
+file.reference.poi-examples-3.11-20141221.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\poi-examples-3.11-20141221.jar
+file.reference.poi-excelant-3.11-20141221.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\poi-excelant-3.11-20141221.jar
+file.reference.poi-ooxml-3.11-20141221.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\poi-ooxml-3.11-20141221.jar
+file.reference.poi-ooxml-schemas-3.11-20141221.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\poi-ooxml-schemas-3.11-20141221.jar
+file.reference.poi-scratchpad-3.11-20141221.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\poi-scratchpad-3.11-20141221.jar
 file.reference.sqljdbc4.jar=D:\\ToStudent_JDBC\\sqljdbc4.jar
+file.reference.xmlbeans-2.4.0.jar=D:\\ToStudent_JDBC\\\u89e3\u6790excel\u7684jar\\xmlbeans-2.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -62,7 +71,16 @@ javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.2.jar}:\
     ${file.reference.ezmorph-1.0.6.jar}:\
-    ${file.reference.json-lib-2.4-jdk15.jar}
+    ${file.reference.json-lib-2.4-jdk15.jar}:\
+    ${file.reference.commons-fileupload-1.2.2.jar}:\
+    ${file.reference.commons-io-2.2.jar}:\
+    ${file.reference.poi-3.11-20141221.jar}:\
+    ${file.reference.poi-examples-3.11-20141221.jar}:\
+    ${file.reference.poi-excelant-3.11-20141221.jar}:\
+    ${file.reference.poi-ooxml-3.11-20141221.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.11-20141221.jar}:\
+    ${file.reference.poi-scratchpad-3.11-20141221.jar}:\
+    ${file.reference.xmlbeans-2.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
